fix(site): Better alignment of the download table

--- a/site/public/css/_component.less
+++ b/site/public/css/_component.less
@@ -90,10 +90,10 @@
   th {
     font-weight: 400;
     text-align: left;
-    padding-right: @baseLineHeight;
-    padding-left: 10px;
+    padding: 0 @baseLineHeight;
     border-bottom: 1px solid @borderGray;
     border-top: none;
+    line-height: 3 * @baseLineHeight;
   }
 
   td {
@@ -101,6 +101,7 @@
     padding: 0;
     border-bottom: 1px solid @borderGray;
     border-top: none;
+    width: 50px;
 
     a {
       background: none;
